--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>appier_extras_api</name>
+	<name>appier-extras-api</name>
 	<comment></comment>
 	<projects>
 		<project>appier</project>
